{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 474,
  "lineage": "462422d5-1df0-baf0-c0e3-4ba4b80ae056",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm-01-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/networkInterfaces/vm-01-nic",
            "ip_configuration": [
              {
                "name": "ipconfig",
                "primary": true,
                "private_ip_address": "10.189.16.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/virtualNetworks/vnet-C2/subnets/vnet-C2-subnet"
              }
            ],
            "location": "japanwest",
            "mac_address": "00-0D-3A-41-86-79",
            "name": "vm-01-nic",
            "private_ip_address": "10.189.16.4",
            "private_ip_addresses": [
              "10.189.16.4"
            ],
            "resource_group_name": "C2",
            "tags": {
              "ProjectName": "C2App1"
            },
            "virtual_machine_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Compute/virtualMachines/vm-01"
          },
          "dependencies": [
            "azurerm_subnet.vnet-01-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm-02-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/networkInterfaces/vm-02-nic",
            "ip_configuration": [
              {
                "name": "ipconfig",
                "primary": true,
                "private_ip_address": "10.189.16.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/virtualNetworks/vnet-C2/subnets/vnet-C2-subnet"
              }
            ],
            "location": "japanwest",
            "mac_address": "00-0D-3A-40-AD-4D",
            "name": "vm-02-nic",
            "private_ip_address": "10.189.16.5",
            "private_ip_addresses": [
              "10.189.16.5"
            ],
            "resource_group_name": "C2",
            "tags": {
              "ProjectName": "C2App1"
            },
            "virtual_machine_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Compute/virtualMachines/vm-02"
          },
          "dependencies": [
            "azurerm_subnet.vnet-01-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/networkInterfaces/vm-01-nic|/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/networkSecurityGroups/vm-01-nsg",
            "network_interface_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/networkInterfaces/vm-01-nic",
            "network_security_group_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/networkSecurityGroups/vm-01-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.vm-01-nic",
            "azurerm_network_security_group.vm-01-nsg",
            "azurerm_subnet.vnet-01-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/networkInterfaces/vm-02-nic|/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/networkSecurityGroups/vm-02-nsg",
            "network_interface_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/networkInterfaces/vm-02-nic",
            "network_security_group_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/networkSecurityGroups/vm-02-nsg"
          },
          "dependencies": [
            "azurerm_network_security_group.vm-02-nsg",
            "azurerm_subnet.vnet-01-subnet",
            "azurerm_network_interface.vm-02-nic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm-01-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/networkSecurityGroups/vm-01-nsg",
            "location": "japanwest",
            "name": "vm-01-nsg",
            "resource_group_name": "C2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "ProjectName": "C2App1"
            },
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm-02-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/networkSecurityGroups/vm-02-nsg",
            "location": "japanwest",
            "name": "vm-02-nsg",
            "resource_group_name": "C2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "ProjectName": "C2App1"
            },
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "fw-hub-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/Hub/providers/Microsoft.Network/publicIPAddresses/fw-hub-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.78.170.179",
            "ip_version": "IPv4",
            "location": "japanwest",
            "name": "fw-hub-pip",
            "resource_group_name": "Hub",
            "sku": "Standard"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "AzureFirewallSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.189.0.192/26",
            "address_prefixes": [
              "10.189.0.192/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/Hub/providers/Microsoft.Network/virtualNetworks/vnet-Hub/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "Hub",
            "virtual_network_name": "vnet-Hub"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "GatewaySubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.189.0.128/26",
            "address_prefixes": [
              "10.189.0.128/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/Hub/providers/Microsoft.Network/virtualNetworks/vnet-Hub/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "resource_group_name": "Hub",
            "virtual_network_name": "vnet-Hub"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vnet-01-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.189.16.0/28",
            "address_prefixes": [
              "10.189.16.0/28"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/virtualNetworks/vnet-C2/subnets/vnet-C2-subnet",
            "name": "vnet-C2-subnet",
            "resource_group_name": "C2",
            "service_endpoints": [
              "Microsoft.Storage",
              "Microsoft.EventHub"
            ],
            "virtual_network_name": "vnet-C2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vnet-02-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.189.16.64/28",
            "address_prefixes": [
              "10.189.16.64/28"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C3/providers/Microsoft.Network/virtualNetworks/vnet-C3/subnets/vnet-C3-subnet",
            "name": "vnet-C3-subnet",
            "resource_group_name": "C3",
            "virtual_network_name": "vnet-C3"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vnet-hub-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.189.0.0/26",
            "address_prefixes": [
              "10.189.0.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/Hub/providers/Microsoft.Network/virtualNetworks/vnet-Hub/subnets/vnet-Hub-subnet",
            "name": "vnet-Hub-subnet",
            "resource_group_name": "Hub",
            "virtual_network_name": "vnet-Hub"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vnet-hub-subnet-dns",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.189.0.64/26",
            "address_prefixes": [
              "10.189.0.64/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/Hub/providers/Microsoft.Network/virtualNetworks/vnet-Hub/subnets/vnet-Hub-subnet-dns",
            "name": "vnet-Hub-subnet-dns",
            "resource_group_name": "Hub",
            "virtual_network_name": "vnet-Hub"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet-hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.189.0.0/22"
            ],
            "dns_servers": [
              "10.189.0.196"
            ],
            "guid": "6e800c24-adff-4c3c-a41f-67a98cff7b22",
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/Hub/providers/Microsoft.Network/virtualNetworks/vnet-Hub",
            "location": "japanwest",
            "name": "vnet-Hub",
            "resource_group_name": "Hub",
            "subnet": [
              {
                "address_prefix": "10.189.0.0/26",
                "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/Hub/providers/Microsoft.Network/virtualNetworks/vnet-Hub/subnets/vnet-Hub-subnet",
                "name": "vnet-Hub-subnet",
                "security_group": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/Hub/providers/Microsoft.Network/networkSecurityGroups/vnet-Hub-nsg"
              },
              {
                "address_prefix": "10.189.0.128/26",
                "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/Hub/providers/Microsoft.Network/virtualNetworks/vnet-Hub/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              },
              {
                "address_prefix": "10.189.0.192/26",
                "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/Hub/providers/Microsoft.Network/virtualNetworks/vnet-Hub/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet"
              },
              {
                "address_prefix": "10.189.0.64/26",
                "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/Hub/providers/Microsoft.Network/virtualNetworks/vnet-Hub/subnets/vnet-Hub-subnet-dns",
                "name": "vnet-Hub-subnet-dns",
                "security_group": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/Hub/providers/Microsoft.Network/networkSecurityGroups/vnet-Hub-nsg"
              }
            ],
            "tags": {
              "productname": "Hub"
            },
            "vm_protection_enabled": false
          }
        }
      ]
    }
  ]
}